--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajax": "0.0.4",
     "antd": "^4.0.0",
     "axios": "^0.19.0",
     "bootstrap": "^3.4.1",
