--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^4.0.0",
     "axios": "^0.19.0",
     "bootstrap": "^3.4.1",
+    "jquery": "^3.4.1",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.10.2",
